[tool.poetry]
name = "kasi"
version = "0.1.3"
description = "KASI (Korea Astronomy and Space Science Institute) Open API Python Wrapper"
license = "MIT"
authors = ["Yunseong Hwang <kika1492@gmail.com>"]
readme = "README.rst"
homepage = "https://github.com/elbakramer/kasi"
repository = "https://github.com/elbakramer/kasi"
documentation = "https://elbakramer.github.io/kasi/"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
include = [
    "docs",
    "tests",
    "*.rst",
    "LICENSE",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/elbakramer/kasi/issues"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.4"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
actions-toolkit = "^0.0.5"
black = "^21.5b0"
bump2version = "^1.0.1"
codecov = "^2.1.11"
coverage = "^5.5"
dunamai = "^1.5.5"
flake8 = "^3.9.1"
ipython = "^7.23.0"
isort = "^5.8.0"
mypy = "^0.812"
pip-tools = "^6.1.0"
pre-commit = "^2.12.1"
pylint = "^2.8.2"
pytest = "^6.2.4"
pytest-cov = "^2.11.1"
pytest-xdist = "^2.2.1"
Sphinx = "^3.5.4"
sphinx-autoapi = "^1.8.1"
nbsphinx = "^0.8.4"

[tool.poetry.scripts]
kasi = "kasi.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
